# PMOSkills

./: .gitattributes  .gitignore  AUTHORITY-ROUTING.md  CHANGELOG.md  COMPLETION-PLAN-V4.md  COMPLETION-PLAN.md  CORRECTED-AUDIT-REPORT.md  LICENSE.txt  LIFECYCLE-MAP.md  MASTER-PLAN-V2.md  MASTER-PLAN.md  PRINCIPLES-CROSSWALK.md  QUALITY-STANDARDS.md  README.md  README.md.bak.F13  README.md.bak.F15  RELEASE-NOTES-v0.1.md  RELEASE-NOTES-v0.2.md  RELEASE-NOTES-v0.3.md  RELEASE-NOTES-v0.4.md  RELEASE-NOTES.md  SKILL-REGISTRY.md  SKILL-STATUS-REGISTER.md  bash.sh  debug_steps.py  extract_skill_steps.py  my-pmo-notes.md  package-lock.json  package.json  pmi_reference_list.md  source-authority.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
Archive/: COMPLETION-PLAN.md
C4-Process-Records/: PR11-Estimate-Activity-Durations.md  PR13-Monitor-and-Control-Schedule.md  PR16-Determine-Budget.md  PR19-Estimate-Activity-Resources.md  PR20-Plan-Communications-Management.md  PR24-Perform-Quantitative-Risk-Analysis.md  PR25-Plan-Risk-Responses.md  PR27-Plan-Stakeholder-Engagement.md  PR28-Direct-and-Manage-Project-Work.md  PR29-Manage-Project-Knowledge.md  PR35-Control-Costs.md  PR40-Close-Project-or-Phase.md
C5-KA-Crossref/: KA-Crossref-Index.md
C6-TT-Taxonomy/: TT-Taxonomy-Index.md
C7-IO-Registry/: IO-Registry-Index.md
archive/: COMPLETION-PLAN.md  session-start-prompt.md
sdk/pypi/: README.md  pyproject.toml
sdk/pypi/pmoskills/: __init__.py  injector.py  loader.py
sdk/pypi/pmoskills/data/: store.json
sdk/pypi/tests/: test_sdk.py
(+601 files in other folders)
