[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmoskills"
version = "0.6.0b1"
description = "Python SDK for PMOSkills - Executable Skill System & PMO Reference Architecture built on PMI PMBOK 8th Edition"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/fakhruldeen/PMOSkills"
Repository = "https://github.com/fakhruldeen/PMOSkills"

[tool.setuptools]
packages = ["pmoskills", "pmoskills.data"]

[tool.setuptools.package-data]
pmoskills = ["data/*.json"]
